--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "prod":"forever start index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
+    "forever": "^4.0.3",
     "mssql": "^8.1.1",
     "nodemon": "^2.0.16"
   }
